--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,8 @@ ponder_version = 1.0.80
 flywheel_version = 1.0.4
 registrate_version = MC1.20-1.3.3
 
+# Architectury version
+architectury_version = 9.2.14
 
 # Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
 # Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
@@ -41,18 +43,21 @@ mapping_version=1.20.1
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=create_electric_motor
+mod_id=create_minimal_electricity
 # The human-readable display name for the mod.
-mod_name=Create: Electric Motor
+mod_name=Create: Minimal Electricity
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=1.20.1-0.0.3
+mod_version=1.20.1-0.2.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=com.electricMotor.motor
+mod_group_id=com.davib112.minimal_electricity
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=davib112
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-description=A simple electric engine meant to interface create to immersive engineering.\nLoss Rate is changeable in the config file.
+description=A simple electric interface for Create meant for Immersive Engineering.\nBut works with any mod using fe.\n Rates are changeable in the config file.
+#old_description=A simple electric engine meant to interface create to immersive engineering.\nRates is changeable in the config file.
+# The current state of the mod. This is used for display purposes in the mod list.
+mod_status=Alpha
